# ex-ci-cd

./: README.md  pyproject.toml
.github/workflows/: ci-cd.yml
