[project]
name = "exercicio-cicd"
version = "0.1.0"
description = ""
authors = [
    {name = "Julio Maciel",email = "juliomacielcoelho@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
pylint = "^3.3.6"
mypy = "^1.15.0"
radon = "^6.0.1"
pytest = "^8.3.5"

